karl package Changelog
======================

Unreleased
----------

- edited the admin right side portlets to match new portlet styles (LP #610493)

- Added support for logging each query, to compare performance across
  different configurations. Keyed on the `query_log_all` parameter, defaulting
  to False. Entries will be added to `log/query/everything.log`.

- Fixed bug in mailin2 script that caused ZEO connections to be left open if
  there was a configuration error.

- Fixed bug in entity conversion where numeric entities were not converted.

- Removed a redundant copy of the text_scrubber code used by mailin.

- Add some preprocessing to the mailin text scrubber to find URLs and mark
  them up as links using markdown syntax.  (LP #545420)

- Reproduced the websites normalization performed when editing a profile via
  the UI in the cico XML import, so that profile websites data downloaded from
  GSA will also be normalized by prepending 'http://' to websites which begin
  with 'www.'.  Also added an evolve script to normalize the websites field for
  existing profiles.  (LP #605203)

- Convert non-standard mimetypes sent by Internet Explorer for jpeg and png
  image files to their more standard equivalents.  (LP #608473)

- Made all unknown image/* types viewable in default mime info.  (LP #608473)

3.38 (2010-07-09)
-----------------

- removed extra div#footer, so there are not multiple ids (LP #602889)

- LP #602888: Change titles on some People reports.

- LP #601109: Remove code and template for sending email after changing
  password.

- LP #566594: Help text for imagedrawer.

- slightly reduce margin on #right to prevent layout from
  breaking when font size is changed (LP #602837)

- Fix handling  of 'website' in admin CSV user upload. (LP #602473)

- tempfolder:  suppress sending events on add / remove, and therefore
  any catalog activity for objects in the temporary location. (LP #592697)


3.37 (2010-07-06)
-----------------
